testdata/language-features/basic-list/list14.reject.out
type error: can not unify
[32m'List 'Char[m
with
[32m'Tuple0[m

in "testdata/language-features/basic-list/list14.reject.lc" (line 1, column 17):
value = 'h':'i':()
                ^^
